# NetoLibqp

./: CMakeLists.txt  libio.cppm  main.cpp
core/entities/: DbController.cpp  DbController.hpp
